# COS214assignment

./: BeefPatty.cpp  BeefPatty.h  Bill.cpp  Bill.h  BillPayment.cpp  BillPayment.h  Bun.cpp  Bun.h  CMakeLists.txt  Chef.cpp  Chef.h  ChickenPatty.cpp  ChickenPatty.h  Chips.cpp  Chips.h  Colleague.cpp  Colleague.h  Customer.cpp  Customer.h  CustomerPays.cpp  CustomerPays.h  Drink.cpp  Drink.h  DrinkChef.cpp  DrinkChef.h  EmotionalState.cpp  EmotionalState.h  Facade.cpp  Facade.h  Floor.cpp  Floor.h  FloorState.cpp  FloorState.h  FooterBill.cpp  FooterBill.h  Fry.cpp  Fry.h  Full.cpp  Full.h  Garnish.cpp  (+98 more)
.github/workflows/: c-cpp.yml
CaitlinTesting/: CMakeLists.txt  WaiterTest.cpp
JohaneTesting/: CMakeLists.txt  IteratorTests.cpp
KeanuTesting/: CMakeLists.txt  OrderTest.cpp
LaylaTesting/: CMakeLists.txt  GroupStateTest.cpp
MignonTesting/: AdapterTest.cpp  CMakeLists.txt
XadrianTesting/: XadrianTesting.cpp
ZaneTesting/: CMakeLists.txt  ZaneTesting.cpp
adapterTest/: CMakeLists.txt
html/: BeefPatty_8h_source.html  BillPayment_8h_source.html  Bill_8h_source.html  Bun_8h_source.html  Chef_8h_source.html  ChickenPatty_8h_source.html  Chips_8h_source.html  Colleague_8h_source.html  CustomerPays_8h_source.html  Customer_8h_source.html  DrinkChef_8h_source.html  Drink_8h_source.html  EmotionalState_8h_source.html  FloorState_8h_source.html  Floor_8h_source.html  FooterBill_8h_source.html  Fry_8h_source.html  Full_8h_source.html  GarnishChef_8h_source.html  Garnish_8h_source.html  Grill_8h_source.html  GroupIterator_8h_source.html  GroupState_8h_source.html  Group_8h_source.html  Happy_8h_source.html  HeadChef_8h_source.html  HeaderBill_8h_source.html  ItemIterator_8h_source.html  LanguageAdapter_8h_source.html  LanguageTarget_8h_source.html  Lettuce_8h_source.html  MaitreD_8h_source.html  MakeTab_8h_source.html  Marginals_8h_source.html  MeatChef_8h_source.html  Milkshake_8h_source.html  Neutral_8h_source.html  OrderComponent_8h_source.html  OrderItem_8h_source.html  OrderPrint_8h_source.html  (+345 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  (+19 more)
latex/: annotated.tex  classBeefPatty.tex  classBeefPatty__inherit__graph.md5  classBill.tex  classBillPayment.tex  classBillPayment__inherit__graph.md5  classBun.tex  classBun__inherit__graph.md5  classChef.tex  classChef__coll__graph.md5  classChef__inherit__graph.md5  classChickenPatty.tex  classChickenPatty__coll__graph.md5  classChips.tex  classChips__coll__graph.md5  classColleague.tex  classColleague__coll__graph.md5  classColleague__inherit__graph.md5  classCustomer.tex  classCustomerPays.tex  classCustomerPays__coll__graph.md5  classDrink.tex  classDrinkChef.tex  classDrinkChef__coll__graph.md5  classDrinkChef__inherit__graph.md5  classDrink__coll__graph.md5  classDrink__inherit__graph.md5  classEmotionalState.tex  classEmotionalState__inherit__graph.md5  classFloor.tex  classFloorState.tex  classFloorState__inherit__graph.md5  classFooterBill.tex  classFooterBill__coll__graph.md5  classFry.tex  classFull.tex  classFull__inherit__graph.md5  classGarnish.tex  classGarnishChef.tex  classGarnishChef__coll__graph.md5  (+87 more)
test/: CMakeLists.txt  WaiterTest.cpp
tests/: CMakeLists.txt
waiterTest/: CMakeLists.txt
